<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintlayout_registration_base">

    <androidx.cardview.widget.CardView
            android:layout_width="@dimen/round_image"
            android:layout_height="@dimen/round_image"
            android:id="@+id/cardview_registration_roundedimage"
            app:cardCornerRadius="@dimen/round_image"
            android:layout_centerHorizontal="true"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textinputlayout_registration_phonenumber">
        <ImageView
                android:layout_height="@dimen/round_image"
                android:layout_width="match_parent"
                android:id="@+id/imageview_registration_roundedimage"
                android:src="@drawable/addwallet"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_registration_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/all_registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_registration_phonenumber"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="20"
            android:id="@+id/textinputlayout_registration_phonenumber"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textview_registration_irancode"
            android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_registration_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:hint="@string/all_phonenumber"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/all_irancodenumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/textview_registration_irancode"
            app:layout_constraintBottom_toBottomOf="@+id/textinputlayout_registration_phonenumber"
            app:layout_constraintTop_toTopOf="@+id/textinputlayout_registration_phonenumber"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/FontBody" android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>