<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintlayout_exchange_base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@color/colorLight">

    <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar_exchange_forcurrencylist"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/spinner_exchange_curencies"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_exchange_curencies"/>

    <androidx.cardview.widget.CardView
            android:layout_width="@dimen/round_image"
            android:layout_height="@dimen/round_image"
            android:id="@+id/cardview_exchange_roundedimage"
            app:cardCornerRadius="@dimen/card_cornerradius"
            android:layout_centerHorizontal="true"
            android:shape="ring"
            android:thicknessRatio="1.9" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_exchange_curencies">
        <ImageView
                android:layout_height="@dimen/round_image"
                android:layout_width="match_parent"
                android:id="@+id/imageview_exchange_roundedimage"
                android:src="@drawable/exchange"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <Spinner
            android:id="@+id/spinner_exchange_curencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textinputlayout_exchange_source"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_exchange_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="20"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textview_exchange_iranrate"
            app:layout_constraintVertical_bias="0.42000002">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/edittext_exchange_source"
                android:hint="@string/exchange_source"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_exchange_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_exchange_source">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_exchange_destination"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exchange_destination"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/exchange_rial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/textview_exchange_iranrate"
            app:layout_constraintBottom_toBottomOf="@+id/textinputlayout_exchange_source"
            app:layout_constraintTop_toTopOf="@+id/textinputlayout_exchange_source"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            style="@style/FontBody"/>
</androidx.constraintlayout.widget.ConstraintLayout>